--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "firebase": "^9.9.4",
     "next": "12.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-toastify": "^9.0.8"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.11",
