--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tippyjs/react": "^4.2.6",
     "firebase": "^9.9.4",
     "next": "12.3.0",
     "react": "18.2.0",
