--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tippyjs/react": "^4.2.6",
+    "crypto-js": "^4.1.1",
     "firebase": "^9.9.4",
     "next": "12.3.0",
     "react": "18.2.0",
