--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   },
   "dependencies": {
     "@tippyjs/react": "^4.2.6",
-    "crypto-js": "^4.1.1",
     "firebase": "^9.9.4",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-modal": "^3.15.1",
     "react-toastify": "^9.0.8"
   },
   "devDependencies": {
